final changes to deply in vercel

--- a/src/app/domains/info/pages/about/about.component.html
+++ b/src/app/domains/info/pages/about/about.component.html
@@ -1,4 +1,4 @@
 <div class="px-10">
     <h1 class="text-lg font-bold">About</h1>
-    <p class="text-xs">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga odio unde sed neque nulla expedita saepe repellendus officiis? Perferendis voluptate vitae itaque voluptatum consectetur quis dolor nam culpa. Suscipit, eaque!</p>
+    <p class="text-xs">Lorem <span highlight>ipsum</span>, dolor sit amet consectetur adipisicing elit. Fuga odio unde sed neque nulla expedita saepe repellendus officiis? Perferendis voluptate vitae itaque voluptatum consectetur quis dolor nam culpa. Suscipit, eaque!</p>
 </div>
