--- a/src/app/domains/products/pages/product-detail/product-detail.component.html
+++ b/src/app/domains/products/pages/product-detail/product-detail.component.html
@@ -15,6 +15,7 @@
             *ngFor="let image of product()?.images"
             [src]="image"
             (click)="changeCover(image)"
+            [class.border-red-400]="image === cover()"
           />
         </div>
       </div>
@@ -27,9 +28,10 @@
       <p class="leading-relaxed">
         {{product()?.description}}
       </p>
-      <p class="title-font font-medium text-2xl text-gray-900 mt-5">{{product()?.price}}</p>
+      <p class="title-font font-medium text-2xl text-gray-900 mt-5">{{product()?.price | currency:'$':'symbol':'1.0'}}</p>
       <button
         class="flex text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded"
+        (click)="addToCart()"
       >
         Add To Cart
       </button>
